--- a/index.html
+++ b/index.html
@@ -9,5 +9,28 @@
   <a href="/logout">Cerrar sesión</a>
   <iframe src="https://lookerstudio.google.com/embed/reporting/9dd11b28-3fc3-4733-a061-df2a0caea439/page/XTjNF"
           style="width:100%;height:80vh;border:none;"></iframe>
+          <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.1.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.1.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyASQBaFAreKzsUkynWN9eaj6m8hCVusLB8",
+    authDomain: "dashboardchubb.firebaseapp.com",
+    projectId: "dashboardchubb",
+    storageBucket: "dashboardchubb.firebasestorage.app",
+    messagingSenderId: "168449323263",
+    appId: "1:168449323263:web:90a072c6859b9a59845cca",
+    measurementId: "G-QTDTJN9D8H"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
